      recursive (as that defeats the point of scanning a specific folder!)
    * Non collection files with a cue sheet will now load their tracks as
      individual tracks in the playlist instead of as one big track with
      bookmark markers.
    * Dynamic Collection is back. (BR 171213)
    * Searching covers from Last.fm using custom query in interactive mode.
 
  CHANGES:
    * The equalizer configuration is now a seperate tool window accessible 
      from the tool menu.
    * Files with ogg and flac extensions can now be copied to UMS devices.
    * The search/filter edit in the playlist is now cleared when pressing 
      enter. (BR 217159)
    * Amarok now checks if the version of the "amarokcollectionscanner" tool
      is correct. Some users had issues with having mutiple versions of it
      installed, causing scanning to fail.
    * First run: Let users decided on how to handle music location set
      in standard desktop services.
    * Improved cover fetching accuracy and speed.
    * Usability: Better design of playback configuration dialog.
    * Use millisecond accuracy for track bookmarks. Backwards compatible
      with bookmarks stored in previos versions. (BR 215145)
    * Loving a track for Last.fm via the global keyboard action also show a
      message in the status bar.
    * Improved usability of the playlist layout editor dialog.
    * Duplicate unique file identifiers are now indicated in debug output,
      along with the paths of the files, when found instead of being silently
      ignored. This can help discover multiple copies of the same file or
      files which incorrectly have the same MusicBrainz unique identifier.

  BUGFIXES:
    * Fixed crash with moving applets in the Context View. (BR 191918)
    * Fixed crash in KNotify. (BR 224673)
    * Fixed queue management with mouse. (BR 217153)
    * Fixed playback of some streams causing the progress slider to show 