@@ -29,6 +29,7 @@ VERSION 2.2.3
     * Searching covers from Last.fm using custom query in interactive mode.
  
   CHANGES:
+    * Added an expander icon to the collection root items.
     * The equalizer configuration is now a seperate tool window accessible 
       from the tool menu.
     * Files with ogg and flac extensions can now be copied to UMS devices.
